--- a/.github/worklows/ci.yaml
+++ b/.github/worklows/ci.yaml
@@ -1,12 +1,18 @@
 name: ci-goland-worklflow
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 jobs:
-  check-application:
+
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.14'
-      - run: go test
-      - run: go run math.go    
+    - uses: actions/checkout@v3
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
+    - name: Test    
+      run: go test
+    - name: Run 
+      run: go run math.go    
